# smart_locker

./: .clangd  CMakeLists.txt  README.md  partitions.csv
bsp/XST/: CMakeLists.txt  xst.c  xst.h  xst_pack_t.h
bsp/display/: CMakeLists.txt  display.c  display.h  touch.c  touch.h
bsp/lvgl/src/: lv_conf.h
bsp/lvgl_port/: CMakeLists.txt  lv_port_disp.c  lv_port_indev.c
bsp/ui/custom/: CMakeLists.txt
main/: CMakeLists.txt  main.c  main.h
