idf_component_register( SRCS 
                            "lv_port_disp.c"
                            "lv_port_indev.c"
                        INCLUDE_DIRS 
                            "."
                        REQUIRES  
                            display
                            lvgl 
                            esp_lcd 
                            freertos
                            log
                    )